--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@atcute/car": "^3.1.1",
     "@atcute/cbor": "^2.2.4",
     "@atcute/cid": "^2.2.3",
+    "@atcute/varint": "^1.0.2",
     "commander": "^14.0.0",
     "warcio": "^2.4.4"
   }
